# pomodoro

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
src/: App.tsx  Icons.tsx  Settings.tsx  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Timer.tsx  TitleBar.tsx
src/pages/: SettingsPage.tsx  TimerPage.tsx
