[package]
name = "pomodoro"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-file", "fs-create-dir", "fs-write-file", "fs-exists", "fs-read-dir", "path-all", "system-tray", "notification-all", "shell-open", "window-all", "icon-png", "notify-rust"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resvg = "0.42.0"
image = "0.25.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
